# ai-book-seller

./: README.md  docker-compose.yml
book-order/: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
book-order/src/models/: order.py
book-order/src/produce/: producer.py
book-order/src/routers/: Dockerfile  routes.py
book-repository/: .gitignore  README.md  main.py  pyproject.toml
book-repository/src/: dependencies.py  exceptions.py
book-repository/src/agents/: db_agent.py  db_prompt.py  graph_agent.py
book-repository/src/models/: book.py
book-repository/src/postgres/: pg_client.py
book-repository/src/repository/: abstract_repository.py  book.py  book_store.py  mongodb_book_repository.py
book-repository/src/routers/: routes.py
crew-agents/: pyproject.toml  report.md
crew-agents/src/crew-agents/: crew.py
crew-agents/src/crew-agents/config/: agents.yaml
crew-agents/src/crew_agents/: crew.py  main.py
crew-agents/src/crew_agents/config/: tasks.yaml
data-pipeline/: pyproject.toml
data-pipeline/src/: airflow_etl.py
database-agent/: main.py  pyproject.toml
database-agent/src/agents/: graph_agent.py
database-agent/src/models/: request.py  state.py
database-agent/src/routes/: router.py
mcp-server/: .gitignore  main.py  mcp_server.py  pyproject.toml  query_schema.py
mcp-server/src/routers/: routes.py
mcp-server/test/: test_server.py
order-generator/: main.py  pyproject.toml
order-generator/src/: order_producer.py
order-generator/src/kafka/: create_topics.py
user-repository/: main.py  pyproject.toml
user-repository/src/: mongodb_client.py
user-repository/src/models/: address.py  user.py
user-repository/src/repository/: abstract_repository.py  users_repository.py
user-repository/src/routers/: routes.py
user-repository/src/service/: book_service.py  user_services.py
