[project]
name = "user-repository"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.120.3",
    "kagglehub>=0.3.13",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.2",
    "langchain-ollama>=1.0.0",
    "langchain-postgres>=0.0.16",
    "pandas>=2.3.3",
    "sqlalchemy>=2.0.44",
]
