[project]
name = "crew_agents"
version = "0.1.0"
description = "crew-agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
crew_agents = "crew_agents.main:run"
run_crew = "crew_agents.main:run"
train = "crew_agents.main:train"
replay = "crew_agents.main:replay"
test = "crew_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
