[project]
name = "crew_agents"
version = "0.1.0"
description = "crew-agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "chainlit>=2.7.2",
    "crewai[tools]>=0.175.0,<1.0.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-ollama>=0.3.7",
]

[project.scripts]
crew_agents = "crew_agents.main:run"
run_crew = "crew_agents.main:run"
train = "crew_agents.main:train"
replay = "crew_agents.main:replay"
test = "crew_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
